# GMTK-Game-Jam-2025

./: .gitignore  CMakeLists.txt  conanfile.py  game_plan.md  package.sh  text_atlas.xcf
src/: AppBuilder.ixx  CMakeLists.txt  draw.ixx  initialize.ixx  loop_game.ixx  main.cpp  render.ixx  reset_timers.ixx  run.ixx  setup.ixx  should_exit.ixx  shutdown.ixx  update.ixx  update_timers.ixx
src/common/: AnimationTimer.ixx  CMakeLists.txt  Drawable.ixx  FontLoader.ixx  Fonts.ixx  GameTickTimer.ixx  GameTimer.ixx  GlobalState.cxx  GlobalState.ixx  GlobalTimer.ixx  LevelLoader.ixx  Position.ixx  ShaderLoader.ixx  Shaders.ixx  SoundBufferLoader.ixx  TextureLoader.ixx  Textures.ixx  load_fonts.ixx  load_shaders.ixx  load_textures.ixx  textures.ixx
src/components/: Animation.ixx  AttackAttributes.ixx  CMakeLists.txt  Drawable.ixx  Enemy.ixx  Health.ixx  Hitbox.ixx  Home.ixx  Moveable.ixx  MovementSpeed.ixx  Player.ixx  Position.ixx  SFMLComponent.ixx  Solid.ixx  Spawner.ixx  Tile.ixx  Velocity.ixx  Weapon.ixx  WeaponProjectile.ixx
src/core/: CMakeLists.txt  app_is_running.cxx  app_is_running.ixx  create_app_is_running.cxx  create_app_is_running.ixx  create_app_is_running_task_builder.cxx  create_app_is_running_task_builder.ixx  create_initialize.cxx  create_initialize.ixx  create_initialize_task_builder.cxx  create_initialize_task_builder.ixx  create_loop_game.cxx  create_loop_game.ixx  create_loop_game_task_builder.cxx  create_loop_game_task_builder.ixx  create_render.cxx  create_render.ixx  create_render_task_builder.cxx  create_render_task_builder.ixx  create_reset_timers.cxx  create_reset_timers.ixx  create_reset_timers_task_builder.cxx  create_reset_timers_task_builder.ixx  create_run.cxx  create_run.ixx  create_run_task_builder.cxx  create_run_task_builder.ixx  create_shut_down.cxx  create_shut_down.ixx  create_shut_down_task_builder.cxx  create_shut_down_task_builder.ixx  create_update.cxx  create_update.ixx  create_update_task_builder.cxx  create_update_task_builder.ixx  create_update_timers.cxx  create_update_timers.ixx  create_update_timers_task_builder.cxx  create_update_timers_task_builder.ixx  initialize.cxx  (+17 more)
src/enemy/: CMakeLists.txt  Enemy.ixx  create_enemies.cxx  create_enemies.ixx  create_enemy.cxx  create_enemy.ixx  move_enemy.cxx  move_enemy.ixx  update_enemy.ixx
src/events/: CMakeLists.txt  GamePauseEvent.ixx  PauseGame.ixx  SpawnDialogEvent.ixx  WindowEvent.ixx
src/gl/: CMakeLists.txt  VertexBuffers.ixx  VertexBufs.ixx  initialize.ixx  render.cxx  render.ixx  render_extra.cxx  render_extra.ixx
src/level/: CMakeLists.txt  create_tiles.ixx  draw_level.ixx  place_home.ixx
src/logic/: CMakeLists.txt  destroy_dead_enemies.ixx  handle_events.ixx  pause_or_resume_game_on_input.ixx  progress_animations.cxx  progress_animations.ixx
src/messages/: CMakeLists.txt  CurrentTimeMessage.ixx
src/physics/: CMakeLists.txt  README.md  collider.cxx  (+3 more)
(+75 files in other folders)
