add_subdirectory(common)
add_subdirectory(components)
add_subdirectory(core)
add_subdirectory(enemy)
add_subdirectory(events)
add_subdirectory(gl)
add_subdirectory(logic)
add_subdirectory(messages)
add_subdirectory(ui)
add_subdirectory(physics)
add_subdirectory(player)
add_subdirectory(spawner)
add_subdirectory(states)
add_subdirectory(weapon)
add_subdirectory(window)
add_subdirectory(level)

target_sources(${PROJECT_NAME} PRIVATE
        main.cpp
)
